@@ -207,8 +207,8 @@ class MasterUI {open : {private MiscFuncs}
                   synth->getRuntime().saveConfig();
                   synth->guiClosed(true);
           }} open
-      xywh {4 20 385 465} type Double labelfont 13 labelsize 12 hide
-      code0 {partmax = NUM_MIDI_PARTS;} xclass Yoshimi
+      xywh {4 20 385 465} type Double labelfont 13 labelsize 12
+      code0 {partmax = NUM_MIDI_PARTS;} xclass Yoshimi visible
     } {
       Fl_Menu_Bar mastermenu {open
         xywh {-4 0 400 25} labelsize 13
@@ -500,7 +500,8 @@ mainCreateNewInstance(forceId);}
               }
               synth->actionLock(lockmute);
               synth->shutup = 1;
-              synth->actionLock(unlock);}
+              synth->fadeLevel = 1.0f;
+              synth->actionLock(unlock);} selected
           tooltip {Cease all sound immediately!} xywh {11 46 50 20} box PLASTIC_UP_BOX color 88 selection_color 32 labelfont 1 labelsize 11 align 16
         }
         Fl_Dial mastervolumedial {
@@ -1164,8 +1165,7 @@ updatepanel();} open
   } {
     code {//
     string name = prefix + " - Part " + asString(partui->npart + 1) + " " + partui->part->Pname;
-    return name;} {selected
-    }
+    return name;} {}
   }
   Function {setPartVolWidget(int _npart, float _value)} {open
   } {
