@@ -1,10 +1,15 @@
 yoshimi 1.3.x
 
+2015-4-27 Will
+- Fixed bug that stopped some rotary controls responding to mouse wheel.
+- Re-orderd part effects window to more closely match system & insert.
+- Made 'panic' stop fade at a fixed rate so it is now click free even for
+  very high sample rate and small buffer size.
+
 2015-4-25 Will
 - Added part number and name to editing window title bars.
 - Made it possible to silently disconnect/reconnect a part from all MIDI input.
 - Improved config settings for Bank Root & Extended Program Change.
-
 2015-4-24 Will
 - Implemented 14bit NRPNs
 - Implemented scroll wheel control of knobs
